@@ -13,6 +13,7 @@ protected:
   int _pos;
 
   char _char_arr[];
+  short _short_arr[];
   int _int_arr[];
   double _double_arr[];
 
@@ -52,6 +53,7 @@ public:
   void init()
   {
     ArrayResize( _char_arr, 1 );
+    ArrayResize( _short_arr, 1 );
     ArrayResize( _int_arr, 1 );
     ArrayResize( _double_arr, 1 );
 
@@ -108,6 +110,17 @@ public:
     ArrayCopy( buf, _data );
   }
   
+  /*
+  Function: getBuffer
+  
+  Retrieve the data buffer
+  */
+  void getBuffer(char &buf[]) const
+  {
+    ArrayResize( buf, 0 );
+    ArrayCopy( buf, _data );
+  }
+
   /*
   Function: reserve
   
@@ -186,7 +199,7 @@ public:
     return THIS;
   }
 
-  nvBinStream *operator<<(const double &val)
+  nvBinStream *operator<<(double val)
   {
     int num = 8; 
     reserve(num);
@@ -217,7 +230,7 @@ public:
     return THIS;
   }  
 
-  nvBinStream *operator<<(const char &val)
+  nvBinStream *operator<<(char val)
   {
     int num = 1; 
     reserve(num);
@@ -248,7 +261,7 @@ public:
     return THIS;
   }    
 
-  nvBinStream *operator<<(const bool &val)
+  nvBinStream *operator<<(bool val)
   {
     char tval = 1;
     char fval = 0;
@@ -271,4 +284,95 @@ public:
     
     return THIS;
   }
+
+  nvBinStream *operator<<(short val)
+  {
+    int num = 2; 
+    reserve(num);
+
+    _short_arr[0] = val;
+
+    long src = getMemAddress(_short_arr);
+    long dest = getMemAddress(_data);
+
+    memcpy(dest+_pos,src,num);
+    _pos += num;
+
+    return THIS;
+  }  
+
+  nvBinStream *operator>>(short &val)
+  {
+    int num = 2;
+
+    long dest = getMemAddress(_short_arr);
+    long src = getMemAddress(_data);
+
+    memcpy(dest,src+_pos,num);
+    _pos += num;
+    
+    val = _short_arr[0];
+    
+    return THIS;
+  }    
+
+  nvBinStream *operator<<(ushort val)
+  {
+    short val2 = (short)val;
+    return (this << val2);
+  }
+
+  nvBinStream *operator>>(ushort &val)
+  {
+    short val2;
+    this >> val2;
+    val = (ushort)val2;
+    return THIS;
+  }
+
+  nvBinStream *operator<<(uchar val)
+  {
+    char val2 = (char)val;
+    return (this << val2);
+  }
+
+  nvBinStream *operator>>(uchar &val)
+  {
+    char val2;
+    this >> val2;
+    val = (uchar)val2;
+    return THIS;
+  }
+
+  nvBinStream *operator<<(datetime val)
+  {
+    MqlDateTime dts;
+    TimeToStruct(val,dts);
+
+    // write the time elements:
+    this << (ushort)dts.year << (uchar)dts.mon << (uchar)dts.day;
+    this << (uchar)dts.hour << (uchar)dts.min << (uchar)dts.sec;
+    this << (ushort)0; // milliseconds will always be zero here.
+
+    return THIS;
+  }  
+  
+  nvBinStream *operator>>(datetime &val)
+  {
+    ushort year, msecs;
+    uchar month, day, hour, min, sec;
+    this >> year >> month >> day >> hour >> min >> sec >> msecs;
+    
+    MqlDateTime dts;
+    dts.year = year;
+    dts.mon = month;
+    dts.day = day;
+    dts.hour = hour;
+    dts.min = min;
+    dts.sec = sec;
+
+    val = StructToTime(dts);
+    
+    return THIS;
+  }   
 };
